<resources>
    <string name="app_name">PrivateLibrarian</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="picture">Picture</string>
    <string name="scan">Scan</string>
    <string name="scanned_value">Scanned Value:</string>
    <string name="please_scan_first">{{please scan first}}</string>
    <string name="Star">*</string>
    <string name="search">Manual</string>
    <string name="isbn">ISBN</string>
    <string name="Scan_fail">scan failed</string>
    <string name="deleteText">Vill du verkligen ta bort boken?</string>
    <string name="Ok">ok</string>
    <string name="Cancel">Cancel</string>
    <string name="PopAdd">Lägg till</string>
    <string name="popDel">Tabort</string>
    <string name="contextDelete">Radera</string>
    <string name="contextADD">Lägga till</string>
    <string name="contextInfo">Info</string>
</resources>
