<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InlineScanActivity">

        <com.journeyapps.barcodescanner.DecoratedBarcodeView
                android:id="@+id/barcodeView"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:zxing_scanner_layout="@layout/custom_barcode_layout" />

        <Button
            android:text="@string/Star"
            android:id="@+id/btnTorch"
            app:layout_constraintRight_toRightOf="@id/barcodeView"
            app:layout_constraintBottom_toBottomOf="@id/barcodeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barcodeView"
                app:layout_constraintVertical_bias="0.0">

                <Button
                        android:id="@+id/btnScan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scan"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/simple_recyclerview"
                        android:layout_width="402dp"
                        android:layout_height="514dp"
                        android:layout_marginStart="4dp"
                        android:scrollbarAlwaysDrawHorizontalTrack="true"
                        android:scrollbarAlwaysDrawVerticalTrack="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtIbdn" />

                <EditText
                        android:id="@+id/txtIbdn"
                        android:layout_width="170dp"
                        android:layout_height="49dp"
                        android:hint="@string/isbn"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textSize="24sp"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="9999999999999" />

                <TextView
                        android:id="@+id/textView"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/isbn"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/btnScan"
                        app:layout_constraintTop_toTopOf="parent" />

                <Button
                        android:id="@+id/btnSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search"
                        app:layout_constraintStart_toEndOf="@+id/txtIbdn"
                        app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>